--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
-HELLO WORLD
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+<meta charset="UTF-8" />
+<title>Auditoria Pública – Sorteio BTC</title>
+<style>
+body {
+font-family: Arial, Helvetica, sans-serif;
+background: #0f1220;
+color: #eaeaf0;
+margin: 0;
+padding: 0;
+}
+header {
+background: linear-gradient(135deg, #1f2bff, #00c2ff);
+padding: 30px 20px;
+text-align: center;
+}
+header h1 {
+margin: 0;
+font-size: 26px;
+}
+header p {
+margin-top: 8px;
+font-size: 14px;
+opacity: 0.9;
+word-break: break-all;
+}
+.container {
+max-width: 1100px;
+margin: 30px auto;
+padding: 0 20px;
+}
+.card {
+background: #161a2f;
+border-radius: 12px;
+padding: 20px;
+margin-bottom: 25px;
+box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+}
+.card h2 {
+margin-top: 0;
+font-size: 20px;
+border-bottom: 1px solid #2a2f55;
+padding-bottom: 8px;
+}
+ul {
+padding-left: 18px;
+}
+li {
+margin-bottom: 6px;
+word-break: break-all;
+}
+.highlight {
+color: #00e0ff;
+font-weight: bold;
+}
+.progress {
+background: #0c0f1f;
+border-radius: 8px;
+overflow: hidden;
+height: 20px;
+margin-top: 10px;
+}
+.progress-bar {
+background: linear-gradient(90deg, #00c2ff, #1f2bff);
+height: 100%;
+width: 0%;
+transition: width 0.4s ease;
+}
+footer {
+text-align: center;
+padding: 20px;
+font-size: 12px;
+opacity: 0.7;
+}
+code {
+background: #0c0f1f;
+padding: 4px 6px;
+border-radius: 6px;
+display: inline-block;
